💄(layout) push course teaser to aside column and fix responsive
Course detail teaser take full width and takes too much place.
Also there is some responsive issues.

Teaser video has been moved to under title, title placed in main
column, responsive issues has been fixed and some minor color
adjustment on content rows.

--- a/src/richie/apps/courses/templates/courses/cms/_course_detail.scss
+++ b/src/richie/apps/courses/templates/courses/cms/_course_detail.scss
@@ -1,12 +1,11 @@
 .course-detail {
   @include make-container-max-widths();
-  display: flex;
   margin: 0 auto;
-  padding: 1rem 0 0;
-  flex-direction: column;
-  flex-wrap: wrap;
+  padding: 0;
 
   @include media-breakpoint-up(lg) {
+    display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
   }
 
@@ -15,10 +14,14 @@
     position: relative;
     margin: 0 0 1rem 0;
     padding: 1rem 0;
-    font-size: 3rem;
+    font-size: 2.6rem;
     font-weight: normal;
     line-height: 1.1;
     text-align: center;
+
+    @include media-breakpoint-up(lg) {
+      font-size: 3rem;
+    }
 
     &::after{
       $divider-width: 10rem;
@@ -28,40 +31,6 @@
       left: calc(50% - #{$divider-width / 2});
       bottom: 0;
       border-bottom: 1px solid $gray40;
-    }
-  }
-
-  &__teaser {
-    @include sv-flex-cell-width(100%);
-    margin: 0;
-    padding: 0;
-    /**
-     * Code below replicate .reponsive-embed from Bootstrap with forced 16/9
-     * cause we cannot use object-fit since it is not compatible under IE
-     * Edge 16. For not forced ratio we may use something like flex-video
-     * (which involve some JS)
-     */
-    position: relative;
-    display: block;
-    overflow: hidden;
-
-    &::before {
-      display: block;
-      content: "";
-      padding-top: percentage(9 / 16);
-    }
-
-    iframe,
-    embed,
-    object,
-    video {
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      border: 0;
     }
   }
 
@@ -89,7 +58,7 @@
       }
 
       // Automatically alternate bg color on odd/even items
-      &:nth-child(2n+0) {
+      &--even{
         color: $white;
         background: $dodgerblue7;
 
@@ -134,6 +103,40 @@
 
     @include media-breakpoint-up(lg) {
       @include sv-flex-cell-width(30%);
+    }
+
+    &__teaser {
+      @include sv-flex-cell-width(100%);
+      margin: 0;
+      padding: 0;
+      /**
+      * Code below replicate .reponsive-embed from Bootstrap with forced 16/9
+      * cause we cannot use object-fit since it is not compatible under IE
+      * Edge 16. For not forced ratio we may use something like flex-video
+      * (which involve some JS)
+      */
+      position: relative;
+      display: block;
+      overflow: hidden;
+
+      &::before {
+        display: block;
+        content: "";
+        padding-top: percentage(9 / 16);
+      }
+
+      iframe,
+      embed,
+      object,
+      video {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: 0;
+      }
     }
 
     &__main-org-logo{
